CAMS-715: Fix gap between Year Type and other fields

--- a/user-interface/src/trustees/forms/EditUpcomingReportDates.scss
+++ b/user-interface/src/trustees/forms/EditUpcomingReportDates.scss
@@ -49,7 +49,7 @@ $input-max-width: 20.75rem;
     gap: 0;
 
     .month-day-selector {
-      margin-right: 1.5rem;
+      margin-right: 2rem;
     }
 
     .year-type-selector {
